; ModuleID = '/home/carl/AnghaBench/systemd/man/extr_glib-event-glue.c_g_sd_event_create_source.c'
source_filename = "/home/carl/AnghaBench/systemd/man/extr_glib-event-glue.c_g_sd_event_create_source.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { i32, i32 }

@event_funcs = common dso_local global i32 0, align 4
@G_IO_IN = common dso_local global i32 0, align 4
@G_IO_HUP = common dso_local global i32 0, align 4
@G_IO_ERR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @g_sd_event_create_source(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %2, align 8
  %4 = call i64 @g_source_new(i32* @event_funcs, i32 12)
  %5 = inttoptr i64 %4 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %5, %struct.TYPE_3__** %3, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @sd_event_ref(i32* %6)
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @sd_event_get_fd(i32* %10)
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  store i32 %11, i32* %14, align 4
  %15 = load i32, i32* @G_IO_IN, align 4
  %16 = load i32, i32* @G_IO_HUP, align 4
  %17 = or i32 %15, %16
  %18 = load i32, i32* @G_IO_ERR, align 4
  %19 = or i32 %17, %18
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  store i32 %19, i32* %22, align 4
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %24 = bitcast %struct.TYPE_3__* %23 to i32*
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = call i32 @g_source_add_poll(i32* %24, %struct.TYPE_4__* %26)
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %29 = bitcast %struct.TYPE_3__* %28 to i32*
  ret i32* %29
}

declare dso_local i64 @g_source_new(i32*, i32) #1

declare dso_local i32 @sd_event_ref(i32*) #1

declare dso_local i32 @sd_event_get_fd(i32*) #1

declare dso_local i32 @g_source_add_poll(i32*, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
